--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
                 <ul class="content__list">
                     <li class="content__list-item">
                         <a href="lesson1/index.html">Урок 1</a>
+                    </li>
+                    <li class="content__list-item">
                         <a href="html-13/index.html">Урок 13</a>
                     </li>
                 </ul>
