--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
                     <li class="content__list-item">
                         <a href="html-21/index.html">Урок 20</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="css-36/index.html">Урок 36</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
