--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                     <li class="content__list-item">
                         <a href="css-36/index.html">Урок 36</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="54-homework/index.html">Урок 54</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
