--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                      <li class="content__list-item">
                         <a href="55-homework/index.html">Урок 55</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="57-homework/index.html">Урок 57</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
