--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
                     <li class="content__list-item">
                         <a href="57-homework/index.html">Урок 57</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="58-homework/index.html">Урок 58</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
