--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
                     <li class="content__list-item">
                         <a href="58-homework/index.html">Урок 58</a>
                     </li>
+                     <li class="content__list-item">
+                        <a href="94-js/index.html">Урок 94</a>
+                    </li>
+                     <li class="content__list-item">
+                        <a href="97-js/index.html">Урок 97</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
