--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
                      <li class="content__list-item">
                         <a href="97-js/index.html">Урок 97</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="100-js/index.html">Урок 100</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
