--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@
                     <li class="content__list-item">
                         <a href="100-js/index.html">Урок 100</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="101-js/index.html">Урок 101</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="102-js/index.html">Урок 102</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
