--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                     <li class="content__list-item">
                         <a href="102-js/index.html">Урок 102</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="113-js/index.html">Урок 113</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
