--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                     <li class="content__list-item">
                         <a href="113-js/index.html">Урок 113</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="wake-bake/index.html">Wake&Bake</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
