--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
                     <li class="content__list-item">
                         <a href="wake-bake/index.html">Wake&Bake</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="dyson/index.html">Dyson</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
